Refactor: make it easier to set recipe ingredients in the API (#2701)