@@ -4,18 +4,17 @@ import com.mojang.blaze3d.vertex.PoseStack;
 
 import org.jetbrains.annotations.Nullable;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import com.mojang.blaze3d.systems.RenderSystem;
+import mezz.jei.api.ingredients.ITypedIngredient;
+import mezz.jei.api.recipe.RecipeIngredientRole;
+import mezz.jei.gui.ingredients.RecipeSlot;
 import net.minecraft.client.renderer.Rect2i;
 
 import mezz.jei.Internal;
-import mezz.jei.api.ingredients.IIngredientHelper;
-import mezz.jei.api.ingredients.IIngredientRenderer;
 import mezz.jei.gui.elements.DrawableNineSliceTexture;
-import mezz.jei.gui.ingredients.GuiIngredient;
 import mezz.jei.gui.textures.Textures;
 import mezz.jei.ingredients.IngredientManager;
 import mezz.jei.input.ClickedIngredient;
@@ -34,7 +33,7 @@ public class RecipeCatalysts implements IRecipeFocusSource {
 
 	private final DrawableNineSliceTexture backgroundTab;
 
-	private final List<GuiIngredient<?>> ingredients;
+	private final List<RecipeSlot> recipeSlots;
 	private final DrawableNineSliceTexture slotBackground;
 	private int left = 0;
 	private int top = 0;
@@ -42,7 +41,7 @@ public class RecipeCatalysts implements IRecipeFocusSource {
 	private int height = 0;
 
 	public RecipeCatalysts() {
-		ingredients = new ArrayList<>();
+		recipeSlots = new ArrayList<>();
 
 		Textures textures = Internal.getTextures();
 		backgroundTab = textures.getCatalystTab();
@@ -50,15 +49,15 @@ public class RecipeCatalysts implements IRecipeFocusSource {
 	}
 
 	public boolean isEmpty() {
-		return this.ingredients.isEmpty();
+		return this.recipeSlots.isEmpty();
 	}
 
 	public int getWidth() {
 		return width - overlapSize;
 	}
 
-	public void updateLayout(List<Object> ingredients, RecipesGui recipesGui) {
-		this.ingredients.clear();
+	public void updateLayout(List<ITypedIngredient<?>> ingredients, RecipesGui recipesGui) {
+		this.recipeSlots.clear();
 
 		if (!ingredients.isEmpty()) {
 			Rect2i recipeArea = recipesGui.getArea();
@@ -74,33 +73,33 @@ public class RecipeCatalysts implements IRecipeFocusSource {
 			left = recipeArea.getX() - width + overlapSize; // overlaps the recipe gui slightly
 
 			for (int i = 0; i < ingredients.size(); i++) {
-				Object ingredientForSlot = ingredients.get(i);
-				GuiIngredient<Object> guiIngredient = createGuiIngredient(ingredientForSlot, i, maxIngredientsPerColumn);
-				this.ingredients.add(guiIngredient);
+				ITypedIngredient<?> ingredientForSlot = ingredients.get(i);
+				RecipeSlot recipeSlot = createSlot(ingredientForSlot, i, maxIngredientsPerColumn);
+				this.recipeSlots.add(recipeSlot);
 			}
 		}
 	}
 
-	private <T> GuiIngredient<T> createGuiIngredient(T ingredient, int index, int maxIngredientsPerColumn) {
+	private <T> RecipeSlot createSlot(ITypedIngredient<T> typedIngredient, int index, int maxIngredientsPerColumn) {
 		IngredientManager ingredientManager = Internal.getIngredientManager();
-		IIngredientRenderer<T> ingredientRenderer = ingredientManager.getIngredientRenderer(ingredient);
-		IIngredientHelper<T> ingredientHelper = ingredientManager.getIngredientHelper(ingredient);
 		int column = index / maxIngredientsPerColumn;
 		int row = index % maxIngredientsPerColumn;
-		Rect2i rect = new Rect2i(
-			left + borderSize + (column * ingredientSize) + ingredientBorderSize,
-			top + borderSize + (row * ingredientSize) + ingredientBorderSize,
-			ingredientSize,
-			ingredientSize
+		int xPos = left + borderSize + (column * ingredientSize) + ingredientBorderSize;
+		int yPos = top + borderSize + (row * ingredientSize) + ingredientBorderSize;
+		RecipeSlot recipeSlot = new RecipeSlot(
+			ingredientManager,
+			RecipeIngredientRole.CATALYST,
+			xPos,
+			yPos,
+			0
 		);
-		GuiIngredient<T> guiIngredient = new GuiIngredient<>(index, true, ingredientRenderer, ingredientHelper, rect, 0, 0, 0);
-		guiIngredient.set(Collections.singletonList(ingredient), null);
-		return guiIngredient;
+		recipeSlot.set(List.of(Optional.of(typedIngredient)), List.of());
+		return recipeSlot;
 	}
 
 	@Nullable
-	public GuiIngredient<?> draw(PoseStack poseStack, int mouseX, int mouseY) {
-		int ingredientCount = ingredients.size();
+	public RecipeSlot draw(PoseStack poseStack, int mouseX, int mouseY) {
+		int ingredientCount = recipeSlots.size();
 		if (ingredientCount > 0) {
 			RenderSystem.setShaderColor(1.0F, 1.0F, 1.0F, 1.0F);
 
@@ -113,27 +112,30 @@ public class RecipeCatalysts implements IRecipeFocusSource {
 			}
 			RenderSystem.enableDepthTest();
 
-			GuiIngredient<?> hovered = null;
-			for (GuiIngredient<?> guiIngredient : this.ingredients) {
-				if (guiIngredient.isMouseOver(0, 0, mouseX, mouseY)) {
-					hovered = guiIngredient;
+			RecipeSlot hovered = null;
+			for (RecipeSlot recipeSlot : this.recipeSlots) {
+				if (recipeSlot.isMouseOver(mouseX, mouseY)) {
+					hovered = recipeSlot;
 				}
-				guiIngredient.draw(poseStack, 0, 0);
+				recipeSlot.draw(poseStack);
 			}
 			return hovered;
 		}
 		return null;
 	}
 
-	private Optional<GuiIngredient<?>> getHovered(double mouseX, double mouseY) {
-		return this.ingredients.stream()
-			.filter(guiIngredient -> guiIngredient.isMouseOver(0, 0, mouseX, mouseY))
+	private Optional<RecipeSlot> getHovered(double mouseX, double mouseY) {
+		return this.recipeSlots.stream()
+			.filter(recipeSlot -> recipeSlot.isMouseOver(mouseX, mouseY))
 			.findFirst();
 	}
 
 	@Override
 	public Optional<IClickedIngredient<?>> getIngredientUnderMouse(double mouseX, double mouseY) {
 		return getHovered(mouseX, mouseY)
-			.flatMap(hovered -> ClickedIngredient.create(hovered, false, true));
+			.flatMap(hovered ->
+				hovered.getDisplayedIngredient()
+					.map(displayedIngredient -> new ClickedIngredient<>(displayedIngredient, hovered.getRect(), false, true))
+			);
 	}
 }
