@@ -3,16 +3,20 @@ package mezz.jei.ingredients;
 import mezz.jei.api.constants.VanillaTypes;
 import mezz.jei.api.ingredients.IIngredientType;
 import mezz.jei.api.ingredients.IIngredients;
+import mezz.jei.api.recipe.RecipeIngredientRole;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Ingredient;
-
 import org.jetbrains.annotations.Nullable;
+
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
+import java.util.stream.Stream;
 
-public class Ingredients implements IIngredients {
+@SuppressWarnings({"removal", "deprecation"})
+public class Ingredients implements IIngredients, IIngredientSupplier {
 	private final List<IngredientsForType<?>> inputs = new ArrayList<>();
 	private final List<IngredientsForType<?>> outputs = new ArrayList<>();
 
@@ -22,8 +26,8 @@ public class Ingredients implements IIngredients {
 	}
 
 	@Override
-	public <T> void setInputLists(IIngredientType<T> ingredientType, List<List<T>> inputs) {
-		List<List<T>> expandedInputs = new ArrayList<>(inputs);
+	public <T> void setInputLists(IIngredientType<T> ingredientType, List<@Nullable List<@Nullable T>> inputs) {
+		List<@Nullable List<@Nullable T>> expandedInputs = new ArrayList<>(inputs);
 		setIngredients(ingredientType, this.inputs, expandedInputs);
 	}
 
@@ -32,17 +36,17 @@ public class Ingredients implements IIngredients {
 		List<List<ItemStack>> inputLists = new ArrayList<>();
 		for (Ingredient input : inputs) {
 			ItemStack[] stacks = input.getItems();
-			List<ItemStack> expandedInput = Arrays.asList(stacks);
+			List<ItemStack> expandedInput = List.of(stacks);
 			inputLists.add(expandedInput);
 		}
 		setIngredients(VanillaTypes.ITEM, this.inputs, inputLists);
 	}
 
 	@Override
-	public <T> void setInputs(IIngredientType<T> ingredientType, List<T> inputs) {
-		List<List<T>> expandedInputs = new ArrayList<>();
-		for (T input : inputs) {
-			List<T> expandedInput = Collections.singletonList(input);
+	public <T> void setInputs(IIngredientType<T> ingredientType, List<@Nullable T> inputs) {
+		List<@Nullable List<@Nullable T>> expandedInputs = new ArrayList<>();
+		for (@Nullable T input : inputs) {
+			List<@Nullable T> expandedInput = Collections.singletonList(input);
 			expandedInputs.add(expandedInput);
 		}
 		setIngredients(ingredientType, this.inputs, expandedInputs);
@@ -54,40 +58,36 @@ public class Ingredients implements IIngredients {
 	}
 
 	@Override
-	public <T> void setOutputs(IIngredientType<T> ingredientType, List<T> outputs) {
-		List<List<T>> expandedOutputs = new ArrayList<>();
-		for (T output : outputs) {
-			List<T> expandedOutput = Collections.singletonList(output);
+	public <T> void setOutputs(IIngredientType<T> ingredientType, List<@Nullable T> outputs) {
+		List<@Nullable List<@Nullable T>> expandedOutputs = new ArrayList<>();
+		for (@Nullable T output : outputs) {
+			List<@Nullable T> expandedOutput = Collections.singletonList(output);
 			expandedOutputs.add(expandedOutput);
 		}
 		setIngredients(ingredientType, this.outputs, expandedOutputs);
 	}
 
 	@Override
-	public <T> void setOutputLists(IIngredientType<T> ingredientType, List<List<T>> outputs) {
-		List<List<T>> expandedOutputs = new ArrayList<>(outputs);
+	public <T> void setOutputLists(IIngredientType<T> ingredientType, List<@Nullable List<@Nullable T>> outputs) {
+		List<@Nullable List<@Nullable T>> expandedOutputs = new ArrayList<>(outputs);
 		setIngredients(ingredientType, this.outputs, expandedOutputs);
 	}
 
 	@Override
-	public <T> List<List<T>> getInputs(IIngredientType<T> ingredientType) {
+	public <T> List<@Nullable List<@Nullable T>> getInputs(IIngredientType<T> ingredientType) {
 		return getIngredients(ingredientType, this.inputs);
 	}
 
 	@Override
-	public <T> List<List<T>> getOutputs(IIngredientType<T> ingredientType) {
+	public <T> List<@Nullable List<@Nullable T>> getOutputs(IIngredientType<T> ingredientType) {
 		return getIngredients(ingredientType, this.outputs);
 	}
 
-	public List<IngredientsForType<?>> getInputIngredients() {
-		return inputs;
-	}
-
-	public List<IngredientsForType<?>> getOutputIngredients() {
-		return outputs;
-	}
-
-	private static <T> void setIngredients(IIngredientType<T> ingredientType, List<IngredientsForType<?>> ingredientsForTypes, List<List<T>> ingredients) {
+	private static <T> void setIngredients(
+		IIngredientType<T> ingredientType,
+		List<IngredientsForType<?>> ingredientsForTypes,
+		List<@Nullable List<@Nullable T>> ingredients
+	) {
 		IngredientsForType<T> recipeIngredients = getIngredientsForType(ingredientType, ingredientsForTypes);
 		if (recipeIngredients == null) {
 			ingredientsForTypes.add(new IngredientsForType<>(ingredientType, ingredients));
@@ -96,7 +96,7 @@ public class Ingredients implements IIngredients {
 		}
 	}
 
-	private static <T> List<List<T>> getIngredients(IIngredientType<T> ingredientType, List<IngredientsForType<?>> ingredientsForTypes) {
+	private static <T> List<@Nullable List<@Nullable T>> getIngredients(IIngredientType<T> ingredientType, List<IngredientsForType<?>> ingredientsForTypes) {
 		IngredientsForType<T> recipeIngredients = getIngredientsForType(ingredientType, ingredientsForTypes);
 		if (recipeIngredients == null) {
 			return Collections.emptyList();
@@ -114,5 +114,43 @@ public class Ingredients implements IIngredients {
 			}
 		}
 		return null;
+	}
+
+	@Override
+	public Stream<? extends IIngredientType<?>> getIngredientTypes(RecipeIngredientRole role) {
+		List<IngredientsForType<?>> source;
+		if (role == RecipeIngredientRole.INPUT) {
+			source = inputs;
+		} else if (role == RecipeIngredientRole.OUTPUT) {
+			source = outputs;
+		} else {
+			return Stream.of();
+		}
+
+		return source.stream()
+			.map(IngredientsForType::getIngredientType)
+			.distinct();
+	}
+
+	@Override
+	public <T> Stream<T> getIngredientStream(IIngredientType<T> ingredientType, RecipeIngredientRole role) {
+		List<IngredientsForType<?>> source;
+		if (role == RecipeIngredientRole.INPUT) {
+			source = inputs;
+		} else if (role == RecipeIngredientRole.OUTPUT) {
+			source = outputs;
+		} else {
+			return Stream.empty();
+		}
+
+		IngredientsForType<T> ingredientsForType = getIngredientsForType(ingredientType, source);
+		if (ingredientsForType == null) {
+			return Stream.empty();
+		}
+		List<@Nullable List<@Nullable T>> ingredients = ingredientsForType.getIngredients();
+		return ingredients.stream()
+			.filter(Objects::nonNull)
+			.flatMap(Collection::stream)
+			.filter(Objects::nonNull);
 	}
 }
